Updated all passed

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,19 @@
-url=http://54.148.96.210/web/login
-salesmanager_username=salesmanager57@info.com
-salesmanager_password=salesmanager
+#######BROWSER CONFIG
 browser=chrome
+environment=qa2
+
+######CREDENTIALS
+salesmanagerusername=salesmanager57@info.com
+salesmanagerpassword=salesmanager
+
+#####Environments
+urlqa1=http://54.148.96.210/web/login
+urlqa2=http://54.148.96.210/web/login
+urlqa3=http://54.148.96.210/web/login
+
+#########WAITS
+SHORT_WAIT=8
+MEDIUM_WAIT=15
+LONG_WAIT=30
+explicitwait=5
+implicitwait=5
